# localstack-quality-monitor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.yml  index.html  pyproject.toml  sources.example.yaml  sources.yaml
.github/workflows/: ci.yml  weekly-run.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
latest/: index.html
reports/2026-01-10/: index.html
reports/2026-01-11/: index.html
reports/2026-01-14/: index.html
reports/2026-01-15/: index.html
reports/2026-01-18/: index.html
specs/001-lsqm-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-lsqm-cli/checklists/: requirements.md
specs/001-lsqm-cli/contracts/: cli-interface.md
src/lsqm/: __init__.py  cli.py
src/lsqm/commands/: __init__.py  clean.py  compare.py  generate.py  mine.py  notify.py  push.py  qa.py  report.py  run.py  status.py  sync.py  validate.py
src/lsqm/models/: __init__.py  architecture.py  operation_coverage.py  preprocessing_delta.py  qa_models.py  regression.py  resource_inventory.py  run.py  service_trend.py  test_app.py  test_quality.py  validation_result.py
src/lsqm/services/: __init__.py  api_server.py  comparator.py  distributed.py  flaky_detector.py  generator.py  git_ops.py  incremental.py  localstack_services.py  multi_version.py  negative_tests.py  normalizer.py  notifier.py  parity_checker.py  performance.py  quality_gates.py  reporter.py  root_cause.py  (+4 more)
tests/: conftest.py  test_cli.py  test_models.py  test_services.py  test_utils.py
(+11 files in other folders)
